less/index.less
// Start here! 

html, body {
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Indie Flower', cursive;
}

.container-fluid {
    background-color:white;
    border-bottom: 2px dashed silver;    
}

.logo-heading {
    padding: 20px 0 10px;
}

.nav {
    a {
        color: black;
    }
}

.container {
    max-width: 800px;
}

.footer {
    color: black;
    background: blanchedalmond;
    padding: 20px 0;
}

